syntax = "proto3";

package com.github.mgljava.protobuf.netty;
option java_package = "com.github.mgljava.protobuf.multi_protocol";
option java_outer_classname = "TaskProtocolWrapper";

message TaskProtocol {
  PackType packType = 1;

  oneof Pack{
    LoginPack loginPack = 2;
    CreateTaskPack createTaskPack = 3;
    DeleteTaskPack deleteTaskPack = 4;
  }
}

enum PackType {
  LOGIN = 0;
  CREATE_TASK = 1;
  DELETE_TASK = 2;
}

message LoginPack {
  string username = 1;
  string password = 2;
}

message CreateTaskPack {
  string taskId = 1;
  sint64 createTime = 2;
  string taskName = 3;
}

message DeleteTaskPack {
  repeated string taskId = 1;
}